Bug 1591100.  Fix the form submission URL for the empty-query case. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D66721

--HG--
extra : moz-landing-system : lando